# Vellora-project-

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  swarmiq_sessions.db
swarmiq/: __init__.py  api.py  config.py  main.py
swarmiq/agents/: __init__.py  conflict_resolver.py  critic.py  evaluator.py  gap_detector.py  literature.py  planner.py  summarizer.py  synthesizer.py  visualization.py
swarmiq/core/: __init__.py  credibility.py  knowledge_store.py  models.py  orchestrator.py  schemas.py  validation.py
swarmiq/export/: __init__.py  citations.py  exporter.py
swarmiq/memory/: __init__.py  reranker.py
swarmiq/public/: index.html
swarmiq/public/css/: style.css
swarmiq/public/js/: main.js
swarmiq/store/: __init__.py  session_store.py
swarmiq/utils/: __init__.py  rate_limiter.py
tests/e2e/: __init__.py  test_demo_queries.py
tests/property/: test_cache_properties.py  test_conflict_properties.py  test_credibility_properties.py  test_evaluator_properties.py  test_export_properties.py  test_literature_properties.py  test_planner_properties.py  test_schema_properties.py  test_session_properties.py  test_summarizer_properties.py  test_synthesizer_properties.py  test_ui_properties.py  test_visualization_properties.py
tests/unit/: test_conflict_resolver.py  test_credibility_scorer.py  test_evaluator.py  test_export_module.py  test_knowledge_store.py  test_literature_agent.py  test_orchestrator.py  test_planner.py  test_schema_validation.py  test_session_store.py  test_summarizer.py  test_synthesizer.py  test_visualization_agent.py
