[build-system]
requires = ["hatchling>=1.0"]
build-backend = "hatchling.build"

[project]
name = "swarmiq"
version = "2.0.0"
description = "Multi-Agent AI Research Assistant"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "SwarmIQ Team", email = "team@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pyautogen>=0.3.0",
    "pinecone-client",
    "tavily-python",
    "google-search-results",
    "sentence-transformers",
    "openai",
    "gradio",
    "plotly",
    "matplotlib",
    "fpdf2",
    "python-pptx",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.110",
    "black",
    "pre-commit",
    "pip-tools",
    "types-all",
]

[project.scripts]
swarmiq = "swarmiq.main:demo.launch"

[project.urls]
Homepage = "https://github.com/yourusername/swarmiq"
Repository = "https://github.com/yourusername/swarmiq.git"

[tool.ruff]
line-length = 88
target-version = "py310"

exclude = [
    ".bzr",
    "build",
    "CVS",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__", 
    "_build",
    ".pytest_cache",
    "dist",
    "node_modules",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "gradio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

